--- a/app/views/todolists/index.html.erb
+++ b/app/views/todolists/index.html.erb
@@ -6,7 +6,12 @@
     <% end %>
     <div class="list-comment">
       <span class="list-body"><%= list.body %></span>
-      <span class="sentiment-score">本文の感情分析スコア<%= list.score %></span>
+      <span class="sentiment-score">
+        スタンプ
+
+        <%= render 'stamp', list: list %>
+
+      </span>
       <span class="list-title"><%=link_to list.title, todolist_path(list.id) %></span>
     </div>
   </div>
