--- a/app/views/todolists/show.html.erb
+++ b/app/views/todolists/show.html.erb
@@ -3,7 +3,11 @@
 
 <h2>本文</h2>
 <p><%= @list.body %></p>
-<p class="sentiment-score">本文の感情分析スコア[<%= @list.score %>]</p>
+<p class="sentiment-score">
+  スタンプ
+  <%= render 'stamp', list: @list %>
+
+</p>
 
 <h2>画像</h2>
 <% if @list.image.attached? %>
